# ExtendedTree

./: Inputfile  Makefile  README.md  pull_request_template.md  template.py
ExtendedTree/: CMakeLists.txt  Inputfile  filenode.cpp  filenode.hpp  main.cpp  params.cpp  params.hpp  report_json.cpp  report_json.hpp  report_pretty.cpp  report_pretty.hpp  reporting.cpp  reporting.hpp  tree.cpp  tree.hpp  utils.cpp  utils.hpp
ExtendedTree/include/: tree.hpp  utils.hpp
ExtendedTree/src/: main.cpp  tree.cpp  utils.cpp
src/: CMakeLists.txt  filenode.cpp  filenode.hpp  main.cpp  reporting.cpp  reporting.hpp  tree.cpp  utils.hpp
tests/: base.py  test_tree.py  test_tree_memory.py
tests/data/: test_json.json  test_json_with_excludes.json  test_json_with_level.json
